# Spatial-Audio-Metrics

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  demo.py  lap_demo.py  load_sonicom_sofa_temp_file (2).sofa  load_sonicom_sofa_temp_file.sofa  noodle.py  pyproject.toml  requirements.txt  setup.cfg
docs/: api.rst  conf.py  hrtf_tutorial.rst  index.rst  install.rst  modules.rst  perception_tutorial.rst  requirements.txt  spatialaudiometrics.rst  support.rst  synthetic_dataset_tutorial.rst  tutorial.rst  versionhistory.rst
docs/_build/doctrees/: environment.pickle  index.doctree  install.doctree  license.doctree  modules.doctree  spatialaudiometrics.doctree  support.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  install.html  license.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  spatialaudiometrics.html  support.html
docs/_build/html/_sources/: index.rst.txt  license.rst.txt  spatialaudiometrics.rst.txt
images/: sam_logo.ai
spatial_audio_metrics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
spatialaudiometrics/: example_data_1.csv  example_sofa_1.sofa  example_sofa_2.sofa  hrtf_metrics.py  lap_challenge.py  load_data.py  load_example_data.py  localisation_metrics.py  signal_processing.py  spherical_metrics.py  statistics.py  visualisation.py
spatialaudiometrics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
