[build-system]
requires = [
    "setuptools>54",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "spatialaudiometrics"
version = "0.1.2"

dependencies = [
"alabaster>=0.7.16",
"asttokens>=2.4.1",
"Babel>=2.14.0",
"certifi>=2024.2.2",
"cftime>=1.6.3",
"charset-normalizer>=3.3.2",
"colorama>=0.4.6",
"comm>=0.2.2",
"contourpy>=1.2.0",
"cycler>=0.12.1",
"debugpy>=1.8.1",
"decorator>=5.1.1",
"docutils>=0.20.1",
"executing>=2.0.1",
"fonttools>=4.50.0",
"idna>=3.6",
"imagesize>=1.4.1",
"importlib_metadata>=7.1.0",
"ipykernel>=6.29.3",
"ipython>=8.22.2",
"jaraco.classes>=3.4.0",
"jaraco.context>=5.3.0",
"jaraco.functools>=4.0.1",
"jedi>=0.19.1",
"Jinja2>=3.1.3",
"jupyter_client>=8.6.1",
"jupyter_core>=5.7.2",
"keyring>=25.2.1",
"kiwisolver>=1.4.5",
"markdown-it-py>=3.0.0",
"MarkupSafe>=2.1.5",
"matplotlib>=3.8.3",
"matplotlib-inline>=0.1.6",
"mdurl>=0.1.2",
"more-itertools>=10.2.0",
"nest-asyncio>=1.6.0",
"netCDF4>=1.6.5",
"nh3>=0.2.17",
"numpy>=1.26.4",
"packaging>=24.0",
"pandas>=2.2.1",
"parso>=0.8.3",
"patsy>=0.5.6",
"pillow>=10.2.0",
"pkginfo>=1.11.0",
"platformdirs>=4.2.0",
"prompt-toolkit>=3.0.43",
"psutil>=5.9.8",
"pure-eval>=0.2.2",
"Pygments>=2.17.2",
"pyparsing>=3.1.2",
"pyproject_hooks>=1.1.0",
"pysofaconventions>=0.1.5",
"python-dateutil>=2.9.0.post0",
"pytz>=2024.1",
"pywin32>=306",
"pywin32-ctypes>=0.2.2",
"pyzmq>=25.1.2",
"readme_renderer>=43.0",
"requests>=2.31.0",
"requests-toolbelt>=1.0.0",
"rfc3986>=2.0.0",
"rich>=13.7.1",
"scikit-posthocs>=0.9.0",
"scipy>=1.12.0",
"seaborn>=0.13.2",
"six>=1.16.0",
"snowballstemmer>=2.2.0",
"stack-data>=0.6.3",
"statsmodels>=0.14.1",
"tornado>=6.4",
"traitlets>=5.14.2",
"tzdata>=2024.1",
"urllib3>=2.2.1",
"wcwidth>=0.2.13",
"wget>=3.2",
"zipp>=3.19.2",
]

authors = [{name = "Katarina C. Poole", email = "katarina.poole@imperial.ac.uk"}]
maintainers = [{name = "Katarina C. Poole", email = "katarina.poole@imperial.ac.uk"}]
description = "For calculating spatial audio metrics"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["spatial","audio","localisation","perception","psychoacoustic","psychophysics","hrtf","hrtfs"]

[project.urls]
url = "https://github.com/Katarina-Poole/Spatial-Audio-Metrics"

[tool.setuptools.packages.find]
exclude = ["docs*", "images*"]