[metadata]
name = spatialaudiometrics
version = 0.0.1
author = Katarina C. Poole
author_email = katarina.poole@imperial.ac.uk
description = For calculating spatial audio metrics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Katarina-Poole/Spatial-Audio-Metrics
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT : License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.11
include_package_data = True